# cratedex

./: .gitignore  .gitleaks.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cratedex.toml.example
.github/workflows/: ci.yml  security.yml
prompts/: coding_modern_rust.md
src/: cli.rs  config.rs  db.rs  error.rs  error_ext.rs  lib.rs  main.rs  service.rs
src/engine/: command.rs  diagnostics.rs  docs.rs  metadata.rs  mod.rs  prompts.rs  resources.rs  server.rs
src/service/: linux.rs  macos.rs  mod.rs  windows.rs
